converted to arraylists